--- a/_includes/widgets/home/header.njk
+++ b/_includes/widgets/home/header.njk
@@ -5,6 +5,6 @@
 <a href="{{downloadlink}}" class="btn btn-light">{{download}}</a>
 </div>
 <div class="col-md-5 p-0">
-<img class="img-fluid" alt="{{metadata.description}}" width="100%" height="100%" src="{{cover}}"/>
+<img class="img-fluid header_image" alt="{{metadata.description}}" width="100%" height="100%" src="{{cover}}"/>
 </div>
 </div>
